<resources>
    <string name="app_name">Dialer</string>
    <string name="dial_button">DIAL</string>
    <string name="call_list_button">CALL LIST</string>
    <string name="settings_button">SETTINGS</string>
    <string name="map_button">MAP</string>
    <string name="about_button">ABOUT</string>
    <string name="web_button">WEB</string>
    <string name="user_question_text">What would you like to do?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="call_list_text">This is the call list!</string>
    <string name="about">About</string>
    <string name="about_text">This app is supposed to mimic the keypad on a phone. The app will consist of activities to:\n- Enter numbers to dial\n- See previously dialed numbers\n- Change the keypad settings\nShow on a Map where previous calls are dialed from</string>
    <string name="no_dir_err">No directory with data exists</string>
    <string name="no_read_ex_storage">Permission denied to read the external storage</string>
    <string name="no_write_ex_storage">Permission denied to write to the external storage</string>
    <string name="call_err">Permission denied to make call from phone</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_web">WebActivity</string>
</resources>
